objects/Tanium_Infrastructure__c/Tanium_Infrastructure__c.object-meta.xml
<CustomObject>
    <label>Tanium Infrastructure Form</label>
    <nameField>
        <displayFormat>Tan-Infra-{00000}</displayFormat>
        <label>Tanium Infrastructure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tanium Infrastructure Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>