objects/Tanium_Infrastructure__c/fields/Appliance_Data_Sheet_Link__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Data_Sheet_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://tanium.my.salesforce.com/0150e000001tg6r&quot;, &quot;Data Sheet Link &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appliance Data Sheet Link</label>
    <type>Text</type>
</CustomField>