objects/Tanium_Infrastructure__c/fields/Appliance_Questionnaire_Status__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Questionnaire_Status__c</fullName>
    <label>Appliance Delivery Questionnaire Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed_Attached</fullName>
                <label>Completed - Attached</label>
            </value>
            <value>
                <fullName>N_A</fullName>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>