objects/Tanium_Infrastructure__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <formula>IF(Tanium_Infrastructure_Form_Status__c = &quot;Pending&quot;,&quot;Please update Tanium Infrastructure Quantities in the section below&quot;,IF(Tanium_Infrastructure_Form_Status__c = &quot;Pending Confirmation&quot; ,&quot;Please update &apos;Quantities Confirmed&apos; to TRUE&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Items</label>
    <type>Text</type>
</CustomField>