objects/Tanium_Infrastructure__c/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <label>Cloud- Provider Name?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon AWS</fullName>
            </value>
            <value>
                <fullName>Google Cloud Platform</fullName>
            </value>
            <value>
                <fullName>Microsoft Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>