objects/Tanium_Infrastructure__c/fields/Deal_Desk_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Desk Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tanium_Infrastructures2</relationshipName>
    <type>Lookup</type>
</CustomField>