objects/Tanium_Infrastructure__c/fields/Federal_Clearance_Required__c.field-meta.xml
<CustomField>
    <fullName>Federal_Clearance_Required__c</fullName>
    <inlineHelpText>Federal customers that require security cleared personnel to support them, and require a DoD UID tag on each appliance. Requires customer contract include a DD254 flowdown to Tanium and Dell Federal, to enable the support services.</inlineHelpText>
    <label>Federal Clearance Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>