objects/Tanium_Infrastructure__c/fields/Opportunity_18ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_18ID__c</fullName>
    <label>Opportunity 18ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>