objects/Tanium_Infrastructure__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Physical - Serial Number (s)</label>
    <type>TextArea</type>
</CustomField>