objects/Tanium_Infrastructure__c/fields/TAN_220_DEV_Copper_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_220_DEV_Copper_Quantity__c</fullName>
    <label>TAN-220-DEV-Copper: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>