objects/Tanium_Infrastructure__c/fields/TAN_220_DEV_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_220_DEV_Fiber_Quantity__c</fullName>
    <label>TAN-225-DEV-Fiber : Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>