objects/Tanium_Infrastructure__c/fields/TAN_320_S_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_320_S_Fiber_Quantity__c</fullName>
    <label>TAN-325-S-Fiber: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>