objects/Tanium_Infrastructure__c/fields/TAN_720_L_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_720_L_Fiber_Quantity__c</fullName>
    <label>TAN-725-L-Fiber: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>