objects/Tanium_Infrastructure__c/fields/TAN_920_XL_Copper__c.field-meta.xml
<CustomField>
    <fullName>TAN_920_XL_Copper__c</fullName>
    <label>TAN-920-XL-Copper: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>