objects/Tanium_Infrastructure__c/fields/TAN_920_XL_Fiber_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_920_XL_Fiber_Quantity__c</fullName>
    <label>TAN-925-XL-Fiber: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>