objects/Tanium_Infrastructure__c/fields/TAN_CLOUD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_CLOUD_Quantity__c</fullName>
    <label>TAN-CLOUD : Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>