objects/Tanium_Infrastructure__c/fields/TAN_L_730_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_L_730_CP_Quantity__c</fullName>
    <label>Large Copper Appliance: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>