objects/Tanium_Infrastructure__c/fields/TAN_S_330_CP_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_S_330_CP_Quantity__c</fullName>
    <label>Small Copper Appliance: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>