objects/Tanium_Infrastructure__c/fields/TAN_XL_935_FB_Quantity__c.field-meta.xml
<CustomField>
    <fullName>TAN_XL_935_FB_Quantity__c</fullName>
    <label>X-Large Fiber Appliance: Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>