objects/Tanium_Infrastructure__c/fields/Tanium_Infrastructure_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantities Confirmed</label>
    <type>Checkbox</type>
</CustomField>