objects/Tanium_Infrastructure__c/fields/Tanium_Infrastructure_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure_Form_Status__c</fullName>
    <formula>IF(  Tanium_Infrastructure_Confirmed__c = true ,&quot;Confirmed&quot;,IF( Total_Appliances__c &gt;0,&quot;Pending Confirmation&quot;,&quot;Pending&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tanium Infrastructure Form Status</label>
    <type>Text</type>
</CustomField>