objects/Tanium_Infrastructure__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Physical - Tracking Number (s)</label>
    <type>TextArea</type>
</CustomField>