objects/Tanium_Infrastructure__c/recordTypes/Confirmed.recordType-meta.xml
<RecordType>
    <fullName>Confirmed</fullName>
    <active>true</active>
    <description>Confirmed Record Type</description>
    <label>Confirmed</label>
</RecordType>