objects/Tanium_Infrastructure__c/validationRules/Name_of_Cloud_Provider.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_of_Cloud_Provider</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(TEXT( Cloud_Provider__c)),  ISPICKVAL( If_Cloud_does_customer_have_direct_conn__c ,&quot;Yes&quot;))</errorConditionFormula>
    <errorDisplayField>Cloud_Provider__c</errorDisplayField>
    <errorMessage>Cloud Provider to be provided when customer has cloud provider</errorMessage>
</ValidationRule>